syntax = "proto3";

package gameap.plugin.sdk.serversettings;

option go_package = "github.com/gameap/gameap/pkg/plugin/sdk/serversettings";

import "pkg/proto/serversetting.proto";

// ServerSettingsService provides server setting repository access to plugins
// go:plugin type=host module=gameap-serversettings
service ServerSettingsService {
  rpc FindServerSettings(FindServerSettingsRequest) returns (FindServerSettingsResponse);
  rpc SaveServerSetting(SaveServerSettingRequest) returns (SaveServerSettingResponse);
}

message FindServerSettingsRequest {
  uint64 server_id = 1;
  repeated string names = 2;
}

message FindServerSettingsResponse {
  repeated gameap.ServerSetting settings = 1;
}

message SaveServerSettingRequest {
  uint64 server_id = 1;
  string name = 2;
  string value = 3;
}

message SaveServerSettingResponse {
  bool success = 1;
  optional string error = 2;
}
